# rams

./: .gitignore  CMakeLists.txt
include/: rams.hpp
src/: main.cpp
